convert to rms and add pitch tracking

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="micMeter">
           <canvas id="input-spectrum" width="400" height="40" class=""></canvas>
           <canvas id="input-meter" width="400" height="10" class="outline-red-300 bg-green-100"></canvas>
-          <span id="dbfs"></span><br>
+          <span id="freq" class="mr-2"></span> <span id="dbfs"></span><br>
           <!-- horizontal mic slider, 400px wide/long -->
           <input type="range" id="mic-gain" min="0" max="100" value="50" class="w-[400px]" />
         </div>
