--- a/index.html
+++ b/index.html
@@ -9,31 +9,34 @@
   </head>
   <body>
     <div class="w-screen h-screen">
-      <div id="app" class="w-full h-full flex flex-col justify-center items-center align-middle m-auto">
+      <div id="app" class="w-full flex flex-col justify-center items-center align-middle m-auto">
         <h1 class="text-xl pb-2">Select an instrument</h1>
+
         <div class="flex align-middle">
           <div class="items-center m-2">
-            <input type="radio" id="inst-0" name="instrument" class="m-1">
-            <label for="inst-0">Wind</label>
+              <select id="instruments" class="m-1">
+                  <option value="0">Wind</option>
+                  <option value="1" selected>Chimes</option>
+                  <option value="2">Blade</option>
+              </select>
           </div>
-          <div class="items-center m-2">
-            <input type="radio" id="inst-1" name="instrument" class="m-1" checked>
-            <label for="inst-1">Chimes</label>
-          </div>
-          <div class="items-center m-2">
-            <input type="radio" id="inst-2" name="instrument" class="m-1">
-            <label for="inst-2">Blade</label>
-          </div>
-        </div>
+      </div>
+
         <br>
-        <canvas id="pinwheelCanvas" width="400" height="400" class="transition z-50"></canvas>
+        <div id="stage" style="width: 400; height: 400;">
+          <!-- <canvas id="ui-canvas" width="400" height="400" class=""></canvas> -->
+          <canvas id="pinwheel-canvas" width="400" height="400" class=""></canvas>
+          <canvas id="input-canvas" width="400" height="400" class=""></canvas>
+          <canvas id="bg-canvas" width="400" height="400" class="transition" style="background-color: #ABCDEF;"></canvas>
+        </div>
+
         <div id="micMeter">
-          <canvas id="input-spectrum" width="400" height="40" class=""></canvas>
           <canvas id="input-meter" width="400" height="10" class="outline-red-300 bg-green-100"></canvas>
           <span id="freq" class="mr-2"></span> <span id="dbfs"></span><br>
           <!-- horizontal mic slider, 400px wide/long -->
           <input type="range" id="mic-gain" min="0" max="100" value="50" class="w-[400px]" />
         </div>
+
         <br>
         <button id="start" type="button" class="outline-dashed py-2 px-4 canDisable text-xl">Start</button>
         <br>
