--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
           <div class="items-center m-2">
               <select id="instruments" class="m-1">
                   <option value="0">Wind</option>
-                  <option value="1" selected>Chimes</option>
-                  <option value="2">Blade</option>
+                  <option value="1">Chimes</option>
+                  <option value="2">Bamboo</option>
+                  <option value="3">Shaker</option>
+                  <option value="4" selected>Voice</option>
               </select>
           </div>
       </div>
