fixed TIMING mechanism! + added bass.ck

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
                   <option value="0">Wind</option>
                   <option value="1">Chimes</option>
                   <option value="2">Bamboo</option>
-                  <option value="3">Shaker</option>
-                  <option value="4" selected>Voice</option>
+                  <option value="3" selected>Bass</option>
+                  <option value="4">Shaker</option>
+                  <option value="5">Voice</option>
               </select>
           </div>
       </div>
