finish pinwheel-0 (wind)

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="flex align-middle">
           <div class="items-center m-2">
               <select id="instruments" class="m-1">
-                  <option value="0">Wind</option>
+                  <option value="0" selected>Wind</option>
                   <option value="1">Chimes</option>
                   <option value="2">Bamboo</option>
-                  <option value="3" selected>Bass</option>
+                  <option value="3">Bass</option>
                   <option value="4">Shaker</option>
                   <option value="5">Voice</option>
               </select>
