--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
           <div class="items-center m-2">
               <select id="instruments" class="m-1">
                   <option value="0">Wind</option>
-                  <option value="1">Chimes</option>
+                  <option value="1" selected>Chimes</option>
                   <option value="2">Bamboo</option>
-                  <option value="3" selected>Bass</option>
-                  <option value="4">Shaker</option>
-                  <option value="5">Voice</option>
+                  <option value="3">Bass</option>
+                  <option value="4">Voice</option>
+                  <option value="5">Drift</option>
               </select>
           </div>
       </div>
