giving up on voice, adding random instrument selection

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <!-- Microphone Control-->
         <div id="microphone-control" class="mobile lg:px-0 flex">
-          <img src="/img/mic.svg" class="w-9 h-9 inline-block pr-2 text-red-400" />
+          <img src="/img/mic.svg" class="w-9 h-9 inline-block pr-2" />
           <input type="range" id="mic-gain" min="0" max="100" value="50" class="w-full" />
         </div>
         <br>
@@ -96,54 +96,44 @@
 
 
         <!-- Menu -->
-        <dialog id="menu-dialog" class="relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
-          <!--
-            Background backdrop, show/hide based on modal state.
-        
-            Entering: "ease-out duration-300"
-              From: "opacity-0"
-              To: "opacity-100"
-            Leaving: "ease-in duration-200"
-              From: "opacity-100"
-              To: "opacity-0"
-          -->
-          <div class="fixed inset-0 bg-white bg-opacity-75 transition-opacity"></div>
-
-          <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
-            <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
-              <!--
-                Modal panel, show/hide based on modal state.
-        
-                Entering: "ease-out duration-300"
-                  From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                  To: "opacity-100 translate-y-0 sm:scale-100"
-                Leaving: "ease-in duration-200"
-                  From: "opacity-100 translate-y-0 sm:scale-100"
-                  To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-              -->
-              <div
-                class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg">
-                <div class="bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
-                  <div class="sm:flex sm:items-start">
-                    <div class="mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">
-                      <h3 class="text-base font-semibold leading-6 text-gray-900" id="modal-title">Deactivate account
-                      </h3>
-                      <div class="mt-2">
-                        <p class="text-gray-500">Are you sure you want to deactivate your account? All of your data will
-                          be permanently removed. This action cannot be undone.</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
-                  <button type="button"
-                    class="inline-flex w-full justify-center rounded-full bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto">Deactivate</button>
-                  <!-- <button type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button> -->
-                </div>
-              </div>
+        <dialog id="menu-dialog" tabindex="-1" aria-hidden="true" class="modal p-6">
+          <!-- Modal header -->
+          <div class="flex items-center justify-between border-b pb-2">
+            <h1 class="text-2xl font-semibold text-gray-900 dark:text-white">
+              About
+            </h1>
+          </div>
+          <!-- Modal body -->
+          <div class="space-y-4 mt-4">
+            <p class="leading-relaxed">
+              Terry Feng - Sonic Pinwheel (2024)
+            </p>
+            <p class="leading-relaxed">
+              A shared, musical installation of browser pinwheel instruments.&nbsp;A distributed symphony of wind and sound.
+            </p>
+            <p>
+              Link: <a href="https://bit.ly/sonic-pinwheel" target="_blank" class="text-blue-500">bit.ly/sonic-pinwheel</a>
+            </p>
+            <!-- QR code -->
+            <img src="/img/pinwheel-qr.png" class="w-32 h-32" />
+            <h2 class="text-2xl font-semibold text-gray-900 dark:text-white border-b pb-2">Advanced</h2>
+            <!-- Volume -->
+            <div id="microphone-control" class="w-full h-10 items-center flex">
+              <img src="/img/speaker.svg" class="w-8 h-8 inline-block pr-2" />
+              <input type="range" id="volume-slider" min="0" max="100" value="50" class="w-full" />
+            </div>
+            <div class="w-full h-10 items-center flex">
+              <span class="pr-2">Enable logging (requires refresh)</span>
+              <input type="checkbox" id="logging-checkbox" class="w-4 h-4" />
             </div>
           </div>
+
+          <!-- Modal footer -->
+          <div class="flex items-center justify-end mt-6 pt-4 border-gray-200 rounded-b dark:border-gray-600">
+            <button id="close-dialog" class="inline-flex justify-center rounded-full border-2 border-slate-200] px-4 py-2 text-sm font-semibold shadow-sm hover:border-[#abcdef] sm:ml-3 sm:w-auto">Close</button>
+          </div>
         </dialog>
+   
 
       </div>
     </div>
