--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
           <div class="items-center px-1 py-1 border-2 border-gray-100 rounded-full enabled:hover:bg-slate-50">
             <select id="instruments" class="rounded-full focus:outline-none transition enabled:hover:bg-slate-50 enabled:hover:cursor-pointer enabled:animate-pulse disabled:opacity-50">
               <option value="0">Wind</option>
-              <option value="1">Chimes</option>
+              <option value="1" selected>Chimes</option>
               <option value="2">Bamboo</option>
               <option value="3">Bass</option>
-              <option value="4" selected>Voice</option>
+              <option value="4">Voice</option>
               <option value="5">Drift</option>
             </select>
           </div>
