helpful UX tips

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- Instrument Select -->
         <div id="instrumentSelect" class="mobile h-20 py-2 px-4 lg:px-0 flex justify-between align-middle items-center">
           <h1 id="select-inst-prompt" class="text-lg pb-2 transition">Select an instrument</h1>
-          <div class="items-center px-1 py-1 border-2 border-gray-100 rounded-full enabled:hover:bg-slate-50">
+          <div class="items-center px-1 py-1 border-2 border-gray-200 rounded-full enabled:hover:bg-slate-50">
             <select id="instruments" class="rounded-full focus:outline-none transition enabled:hover:bg-slate-50 enabled:hover:cursor-pointer enabled:animate-pulse disabled:opacity-50">
               <option value="0">Wind</option>
               <option value="1" selected>Chimes</option>
@@ -83,8 +83,7 @@
         <br>
 
         <!-- START -->
-        <button id="start" type="button"
-          class="rounded-full text-3xl border-2 border-sky-950 py-2 px-8 disabled:opacity-50 enabled:hover:opacity-50 transition">Start</button>
+        <button id="start" type="button" class="rounded-full text-3xl border-2 border-sky-950 py-2 px-8 disabled:opacity-50 enabled:hover:opacity-50 transition">Start</button>
         <br>
         <br>
         <br>
@@ -95,6 +94,7 @@
         </div>
 
 
+        <!-- MODALS -->
         <!-- Menu -->
         <dialog id="menu-dialog" tabindex="-1" aria-hidden="true" class="modal p-6">
           <!-- Modal header -->
