qol menu, console, friction fixes

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </p>
             <p>
               Join on as many devices as possible!<br>
-              <a href="https://bit.ly/sonic-pinwheel" target="_blank" class="text-blue-500">bit.ly/sonic-pinwheel</a><br>
+              <a href="https://bit.ly/sonic-pinwheel" target="_blank" class="text-blue-500 hover:underline">bit.ly/sonic-pinwheel</a><br>
             </p>
             <!-- QR code -->
             <img src="/img/pinwheel-qr.png" class="w-32 h-32" />
@@ -131,7 +131,7 @@
 
           <!-- Modal footer -->
           <div class="flex items-center justify-between mt-6 pt-4 border-gray-200 rounded-b dark:border-gray-600">
-            <span><a href="https://github.com/terryzfeng/Sonic-Pinwheel" target="_blank" class="text-blue-500 underline">GitHub</a><br></span>
+            <span><a href="https://github.com/terryzfeng/Sonic-Pinwheel" target="_blank" class="text-blue-500 hover:underline">GitHub</a><br></span>
             <button id="close-dialog" class="inline-flex justify-center rounded-full border-2 border-slate-200] px-4 py-2 text-sm font-semibold shadow-sm hover:border-[#abcdef] sm:ml-3 sm:w-auto">Close</button>
           </div>
         </dialog>
